--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Lite Line Monitoring System v0.1</title>
     <!-- Script for polyfilling Promises on IE9 and 10 -->
-    <script src='https://cdn.polyfill.io/v2/polyfill.min.js'></script>
-    <script
-  src="https://code.jquery.com/jquery-3.3.1.js"
-  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-  crossorigin="anonymous"></script>
+    <!--script src='https://cdn.polyfill.io/v2/polyfill.min.js'></script-->
+    <meta http-equiv="Content-Security-Policy" content="font-src 'self' data:;" />
   </head>
   <body>
     <div id="app"></div>
